# IS601_Module3

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
calculator/: __init__.py  calculator.py  cli.py  exceptions.py  operations.py  validation.py
tests/: test_calculator.py  test_cli.py  test_exceptions.py  test_main.py  test_operations.py  test_validation.py
